[tool.poetry]
name = "endogen"
version = "0.1.0"
description = "Dynamic endogenous simulation"
authors = ["Jonas Vestby <jonves@prio.org>"]
license = "MIT"
readme = "readme.md"
packages = [
    { include = "endogen"}
]

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "1.2.2"
numpy = "<1.24.0"
pandas = { version = "2.0.1", extras = ["performance", "output_formatting", "computation"] }
pillow = "^9.5.0"
cairosvg = "^2.7.0"
sklearn-xarray = "^0.4.0"
matplotlib = "^3.7.2"
ipython = "^8.14.0"
ipykernel = "^6.25.1"
ipywidgets = "^8.1.0"
mlforecast = "^0.9.1"
seaborn = "^0.12.2"
formulae = "^0.5.0"
hydra-core = "^1.3.2"
numbagg = "^0.6.0"
networkx = "^3.2.1"
graphviz = "^0.20.1"
pyarrow = "^14.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.docs.dependencies]
sphinx-inline-tabs = "^2023.4.21"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-mermaid = "^0.9.2"
furo = "^2023.7.26"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
